<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.task_editor.TaskEditFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/topGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="@dimen/guideline_margin" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/startGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/guideline_margin" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/endGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/guideline_margin" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottomGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="@dimen/guideline_margin" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameTextField"
        style="@style/EditTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        app:hintEnabled="true"
        app:layout_constraintEnd_toEndOf="@id/endGuideline"
        app:layout_constraintStart_toStartOf="@id/startGuideline"
        app:layout_constraintTop_toBottomOf="@id/topGuideline">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameTextField_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dateTextField"
        style="@style/EditTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/textField_margin_top"
        android:hint="@string/date"
        app:hintEnabled="true"
        app:layout_constraintEnd_toEndOf="@id/endGuideline"
        app:layout_constraintStart_toStartOf="@id/startGuideline"
        app:layout_constraintTop_toBottomOf="@id/nameTextField">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dateTextField_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:cursorVisible="false"
            android:focusable="false"
            android:inputType="date"
            android:text="" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/locationTextField"
        style="@style/EditTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/textField_margin_top"
        android:hint="@string/location"
        app:hintEnabled="true"
        app:layout_constraintEnd_toEndOf="@id/endGuideline"
        app:layout_constraintStart_toStartOf="@id/startGuideline"
        app:layout_constraintTop_toBottomOf="@id/dateTextField">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/locationTextField_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/infoTextField"
        style="@style/EditTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/textField_margin_top"
        android:hint="@string/info"
        app:hintEnabled="true"
        app:layout_constraintEnd_toEndOf="@id/endGuideline"
        app:layout_constraintStart_toStartOf="@id/startGuideline"
        app:layout_constraintTop_toBottomOf="@id/locationTextField">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/infoTextField_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="4"
            android:text="" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonCancel"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:elevation="2dp"
        android:gravity="center"
        android:text="@string/cancel"
        android:textAllCaps="false"
        android:textAppearance="@style/AppTheme"
        android:textColor="@color/gray"
        android:textSize="16sp"
        android:textStyle="bold"
        app:backgroundTint="@color/white"
        app:cornerRadius="24dp"
        app:layout_constraintBottom_toBottomOf="@+id/bottomGuideline"
        app:layout_constraintEnd_toStartOf="@+id/buttonSave"
        app:layout_constraintStart_toStartOf="@+id/startGuideline" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonSave"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:elevation="2dp"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textAppearance="@style/AppTheme"
        android:textColor="@color/gray"
        android:textSize="16sp"
        android:textStyle="bold"
        app:backgroundTint="@color/white"
        app:cornerRadius="24dp"
        app:layout_constraintBottom_toBottomOf="@+id/bottomGuideline"
        app:layout_constraintEnd_toStartOf="@+id/endGuideline"
        app:layout_constraintStart_toEndOf="@+id/buttonCancel" />

</androidx.constraintlayout.widget.ConstraintLayout>

